[package]
name = "marathon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

jiff = { workspace = true, features = ["std"] }
jiff-cron = { workspace = true }
moka = { workspace = true, features = ["future"] }
regex = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["rustls", "http2", "json", "query"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serenity = { workspace = true, features = ["rustls_backend", "builder", "gateway"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
