[package]
name = "music"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = ["symphonia"]

[lints]
workspace = true

[dependencies]
zayden-app = { workspace = true }
zayden-core = { workspace = true }

async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
rand = { version = "0.10", default-features = false, features = ["thread_rng"] }
songbird-reqwest = { package = "reqwest", version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
rspotify = { workspace = true, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serenity = { workspace = true }
songbird = { workspace = true, features = [
    "driver",
    "gateway",
    "rustls",
    "serenity",
    "tungstenite",
] }
sqlx = { workspace = true }
symphonia = { version = "0.5", default-features = false, features = [
    "mkv",
    "isomp4",
    "aac",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
