[package]
name = "palworld"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

# These crates are added here so the milestone that introduces them lands in one
# place, but they are only *used* in later milestones of the save-parsing feature
# (oozextract/gvas/flate2 in the `save/` submodule, sqlx in `link.rs`). Until then
# `cargo machete` would flag them as unused; ignore them here and prune this list
# as each dep is wired up.
[package.metadata.cargo-machete]
ignored = ["oozextract", "gvas", "flate2", "sqlx"]

[dependencies]
zayden-core = { workspace = true }

moka = { workspace = true, features = ["future"] }
reqwest = { workspace = true, features = ["rustls", "http2", "json", "query"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serenity = { workspace = true, features = [
    "rustls_backend",
    "builder",
    "gateway",
] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


flate2 = "1"
gvas = "0.11"
oozextract = "=0.5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
