[package]
name = "palworld"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

# `sqlx` is added ahead of use (link persistence, M5) so the dependency lands in
# one place; `cargo machete` would otherwise flag it as unused until then. Prune
# this list once each dep is wired up.
[package.metadata.cargo-machete]
ignored = ["sqlx"]

[dependencies]
zayden-core = { workspace = true }

moka = { workspace = true, features = ["future"] }
reqwest = { workspace = true, features = ["rustls", "http2", "json", "query"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serenity = { workspace = true, features = [
    "rustls_backend",
    "builder",
    "gateway",
] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }


flate2 = "1"
gvas = "0.11"
oozextract = "=0.5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
