[package]
name = "palworld"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-app = { workspace = true }
zayden-core = { workspace = true }

jiff = { workspace = true, features = ["std"] }
jiff-cron = { workspace = true }
jiff-sqlx = { workspace = true }
moka = { workspace = true, features = ["future"] }
reqwest = { workspace = true, features = ["rustls", "http2", "json", "query"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serenity = { workspace = true, features = [
    "rustls_backend",
    "builder",
    "gateway",
] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

flate2 = "1"
gvas = "0.11"
oozextract = "=0.5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
