[package]
name = "suggestions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["rust-tls"]
native-tls = ["serenity/native_tls_backend"]
rust-tls = ["serenity/rustls_backend"]

[dependencies]
zayden-core = { workspace = true }

futures = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
