[package]
name = "temp-voice"
version = "1.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
