[package]
name = "temp-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
