[package]
name = "ticket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

futures = { workspace = true }
sqlx = { workspace = true, features = ["macros"] }
serenity = { workspace = true }
tracing = { workspace = true }
