[package]
name = "zayden-core"
version = "1.0.0"
edition = "2024"

[lints]
workspace = true


[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
jiff-cron = { workspace = true }
futures = { workspace = true }
serenity = { workspace = true, features = ["rustls_backend", "gateway"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
zayden-app = { workspace = true }
